<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_tab_panel1"
    style="@style/TabPanel"
    android:clickable="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_close_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_button"
            android:src="@drawable/ic_close" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <TextView
            style="@style/TextPanelLabel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/alignment_text"
            android:text="@string/alignment" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginRight="@dimen/percent_width"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/img_left_align"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/alignment_left_button"
                android:scaleType="center"
                android:src="@drawable/ic_left_align" />

            <ImageView
                android:id="@+id/img_center_align"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/alignment_center_button"
                android:scaleType="center"
                android:src="@drawable/ic_center_align" />

            <ImageView
                android:id="@+id/img_right_align"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/alignment_right_button"
                android:scaleType="center"
                android:src="@drawable/ic_right_align" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/TextPanelLabel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/size_text"
            android:text="@string/size" />

        <SeekBar
            android:id="@+id/sb_size"
            style="@style/CustomSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/seek_bar"
            android:max="90"
            android:min="0"
            android:progress="10" />

        <TextView
            android:id="@+id/txt_size"
            style="@style/TextPanelLabel"
            android:layout_width="@dimen/percent_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/value_text"
            android:gravity="right"
            android:text="50%" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/TextPanelLabel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rotate_text"
            android:text="@string/rotate" />

        <SeekBar
            android:id="@+id/sb_rotate"
            style="@style/CustomSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/seek_bar"
            android:max="72"
            android:progress="36" />

        <TextView
            android:id="@+id/txt_rotate"
            style="@style/TextPanelLabel"
            android:layout_width="@dimen/percent_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/value_text"
            android:gravity="right"
            android:text="50%" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/TextPanelLabel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line_spacing_text"
            android:text="@string/line_spacing" />

        <SeekBar
            android:id="@+id/sb_line_space"
            style="@style/CustomSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/seek_bar"
            android:max="200"
            android:progress="100" />

        <TextView
            android:id="@+id/txt_line_space"
            style="@style/TextPanelLabel"
            android:layout_width="@dimen/percent_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/value_text"
            android:gravity="right"
            android:text="50%" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            style="@style/TextPanelLabel"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/letter_spacing_text"
            android:text="@string/letter_spacing" />

        <SeekBar
            android:id="@+id/sb_letter_space"
            style="@style/CustomSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/seek_bar"
            android:max="200"
            android:progress="50" />

        <TextView
            android:id="@+id/txt_letter_space"
            style="@style/TextPanelLabel"
            android:layout_width="@dimen/percent_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/value_text"
            android:gravity="right"
            android:text="50%" />
    </LinearLayout>
</LinearLayout>
