<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkestGrey"
    android:orientation="vertical">


    <include
        layout="@layout/actionbar_simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo3" />

        <TextView
            android:id="@+id/txt_version"
            style="@style/TextMainDarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/version" />

        <TextView
            style="@style/TextMainDarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/credits"
            android:textSize="16sp" />

        <TextView
            style="@style/TextPanelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/credit_design"
            android:textSize="12sp" />

        <TextView
            style="@style/TextPanelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/credits_code"
            android:textSize="12sp" />

        <TextView
            style="@style/TextMainDarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/contact"
            android:textSize="16sp" />

        <TextView
            style="@style/TextPanelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/contact_email"
            android:textSize="12sp" />

        <TextView
            style="@style/TextMainDarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center|bottom"
            android:text="@string/copyright"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>