<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_back_dlg"
    android:gravity="center"
    android:orientation="vertical">



    <TextView
        style="@style/TextTitleWithPink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/quit_work" />
    <TextView
        style="@style/TextLargeWithWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_work_comment"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="15sp"
        />
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/ads"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_id" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/TextLargeWithWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="13sp"
            android:id="@+id/btn_yes"
            />
        <TextView
            style="@style/TextLargeWithWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="13sp"
            android:id="@+id/btn_no"
            />

    </LinearLayout>



</LinearLayout>
