<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkestGrey"
    android:orientation="vertical">


    <include
        layout="@layout/actionbar_simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/layout_item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                style="@style/TextSmallWithWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/about_button"
                android:text="@string/about" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/about_button"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                style="@style/TextSmallWithWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/rating_button"
                android:text="@string/rating" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rating_button"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                style="@style/TextSmallWithWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/share_button"
                android:text="@string/recommend_friend" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/share_button"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                style="@style/TextSmallWithWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/neony_insta_button"
                android:text="@string/today_neon" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/neony_insta_button"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_item5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp">

            <TextView
                style="@style/TextSmallWithWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/font_license_button"
                android:text="@string/open_source_library" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/font_license_button"
                android:src="@drawable/ic_right_arrow" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/ads"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_id" />


</LinearLayout>