<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkestGrey"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_button"
            android:padding="20dp"
            android:src="@drawable/ic_back" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_cate"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/sticker_image"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/txt_price"
        style="@style/TextSmallWithGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/img_stickers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/sticker_list_image"
        android:padding="15dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/txt_buy"
        style="@style/ButtonWhiteBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPink"
        android:contentDescription="@string/buy_button"
        android:padding="15dp"
        android:text="@string/buy" />
</LinearLayout>