<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkestGrey"
    tools:context=".LogoActivity">

    <LinearLayout
        android:id="@+id/layout_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/colorDarkestGrey"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/neony_logo"
            android:src="@drawable/logo3" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextMainDarkGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/choose_background_text"
            android:text="@string/please_wait" />

    </LinearLayout>

</RelativeLayout>